--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -15,6 +15,7 @@
             <a href="/">Scan</a>
             <a href="users.html">Users</a>
             <a href="attack.html">Attack</a>
+            <a href="control.html">Control</a>
             <a href="settings.html">Settings</a>
             <a class="right active" href="info.html">Info</a>
         </div>
@@ -26,7 +27,7 @@
     <div class="main-wrap">
         <div id="spinner-container"></div>
         <div class="container">
-            <div class="card-container-basic">
+            <div class="card-container">
                 <div class="settingsHeader">Wi-PWN</div>
                 <div class="card-basic">
                     This project is licensed under the <a href="https://creativecommons.org/licenses/by-nc/4.0/"><i title="CC BY-NC 4.0"> Creative Commons Attribution-NonCommercial 4.0 license.</i></a><br><br>
@@ -38,7 +39,7 @@
                     <br>
                 </div>
             </div>
-            <div class="card-container-basic">
+            <div class="card-container">
                 <div class="settingsHeader">Contributors</div>
                 <div class="card-basic">
                     <a href="https://github.com/spacehuhn/esp8266_deauther"><b>@spacehuhn</a> (Stefan Kremser)</b><br>
@@ -61,7 +62,7 @@
                     For more information go to <a href="https://github.com/samdenty99/Wi-PWN/graphs/contributors">contributors page</a> on GitHub.
                 </div>
             </div>
-            <div class="card-container-basic">
+            <div class="card-container">
                 <hr>
                 <div class="settingsHeader">Included libraries</div>
                 <div class="card-basic oh">
