--- a/web_server/html/setup.html
+++ b/web_server/html/setup.html
@@ -10,7 +10,7 @@
     <div class="main-wrap" style="top:0 !important">
         <div id="spinner-container"></div>
         <div class="container">
-            <div class="card-container-basic">
+            <div class="card-container">
                 <div class="settingsHeader" id="h">Terms and Conditions</div>
                 <div id="ss" class="card-basic">
                     <div id="card-wrapper">
