--- a/web_server/html/users.html
+++ b/web_server/html/users.html
@@ -15,6 +15,7 @@
             <a href="/">Scan</a>
             <a href="users.html" class="active">Users</a>
             <a href="attack.html">Attack</a>
+            <a href="control.html">Control</a>
             <a href="settings.html">Settings</a>
             <a class="right" href="info.html">Info</a>
         </div>
@@ -26,7 +27,7 @@
     <div class="main-wrap">
         <div id="spinner-container"></div>
         <div class="container">
-            <div class="card-container-basic">
+            <div class="card-container">
                 <div class="settingsHeader button-header-2" style="display:inline-block;margin-bottom: 30px">Scan for Wi-Fi users <span id="clientsFound"></span></div>
                 <button onclick="scan()" id="startScan" class="button-primary right button-header-2">Scan</button>
                 <table id="users"></table>
