--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -35,7 +35,7 @@
                     <br>It can perform deauth attacks on unprotected <i>802.11</i> Wi-Fi networks, <i>which could be perceived as using an illegal 'Wi-Fi Jammer'.</i><hr>
                     Wi-PWN is updated and maintained by:<br>
                     <b style="font-size: 1.1em">
-                    <a href="https://mirum.weebly.com/samuel-denty" target="_blank">@samdenty99</a> (Sam Denty)</b>
+                    <a href="https://samdenty99.github.io/about" target="_blank">@samdenty99</a> (Sam Denty)</b>
                     <br>
                 </div>
             </div>
