--- a/web_server/html/settings.html
+++ b/web_server/html/settings.html
@@ -29,7 +29,7 @@
         <div class="container settings">
             <div class="card-container settings">
                 <div class="settingsHeader">Wi-Fi configuration</div>
-                <div class="card">
+                <div class="card-small">
                     <div class="row">
                         <div class="col-12">
                             <div class="input-container">
@@ -59,7 +59,7 @@
             </div>
             <div class="card-container settings">
                 <div class="settingsHeader">Scan &amp; Attack</div>
-                <div class="card">
+                <div class="card-small">
                     <div class="row">
                         <div class="col-12">
                             <div class="input-container">
@@ -93,7 +93,7 @@
             </div>
            <div class="card-container settings">
                 <div class="settingsHeader">Customization</div>
-                <div class="card">
+                <div class="card-small">
                     <div class="row">
                         <div class="col-12">
                             <label for="darkMode">Enable dark mode</label>
@@ -117,7 +117,7 @@
             </div>
             <div class="card-container settings">
                 <div class="settingsHeader">Advanced</div>
-                <div class="card">
+                <div class="card-small">
                     <div class="row">
                         <div class="col-12">
                             <div class="input-container">
